# auto-file-extractor

./: README.md  main.py  pyproject.toml
